# DroneTracking

./: README.md
AR.Drone/: KeyboardController.c  KeyboardController.h  Makefile  Makefile~  ardrone_autopylot.c  ardrone_autopylot.c~  ardrone_autopylot.h  autopylot.makefile  autopylot_agent.py~  autopylot_commands.c  autopylot_commands.c~  autopylot_video.c
PedestrianDetector/: CMakeLists.txt  PedestrianDetector.cpp  PedestrianDetector.cpp~  PedestrianDetector.h  PedestrianDetector.i  buildc  main.cpp
Python/: DistanceError.py  DistanceError.py~  DroneCommands.py  DroneCommands.py~  Mod.py  SaveImage.py  SaveImage.py~  Upper_body.txt  autopylot_agent.py  autopylot_agent.py~  autopylot_agentDPM.py  autopylot_agentDPM.py~  autopylot_agentTLD.py~  autopylot_python_agent.c  autopylot_python_agent.c~  interfaceDPM.py~  interfaceTLD.py~  wisdom.fftw
TLD/libopentld/tld/: TLD.cpp
TLD/opentld/: CMakeLists.txt  CMakeLists.txt~  MainOTLD.cpp  MainOTLD.cpp~  MainOTLD.h  MainOTLD.h~  MainOTLD.i  MainOTLD.i~
TLD/opentld/main/: Config.cpp~  Config.h~  Gui.cpp  Gui.cpp~
